# FinancialRiskAiAgent

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  run.py  run_kafka_agent.py  send_test_txn.py
agents/: risk_detector.py  risk_reasoner.py
api/: app.py
rag/: chroma_client.py  context_retriever.py  seed_data.py  vector_store.py
scripts/: seed_chroma.py
services/: embedding_client.py  groq_client.py  openai_client.py
streaming/: consumer.py  producer.py
utils/: json_guard.py  retry.py
